# timetable

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  codeql-analysis.yml
core/: admin.py  forms.py  schema.py  tasks.py  tests.py  urls.py
core/api/: urls.py
core/api/serializers/: __init__.py  user.py
core/api/utils/: last_modified.py  polymorphism.py
core/api/v3/objects/: __init__.py  announcement.py  base.py  main.py  post_interactions.py  timetable.py  user.py
core/api/views/: __init__.py  announcement.py  events.py  notifs.py  organization.py  term.py  timetable.py  user.py
core/management/commands/: add_clubs.py  add_events.py  auth_google.py
core/migrations/: 0032_alter_user_timezone.py  0047_auto_20211009_2110.py  0048_alter_user_timezone.py  0049_alter_user_timezone.py  0058_fix_blogpost_featured_image_description_squashed_0068_remove_user_expo_notif_token_delete_recurrencerule.py  0071_user_deleted_at_user_is_deleted_alter_comment_author_and_more.py  0072_remove_user_timezone.py  0073_dailyannoucement_alter_event_is_instructional_and_more.py  0073_dailyannouncement_alter_event_is_instructional_and_more.py  0074_event_gcal_etag_event_gcal_id.py  0074_event_gcal_id.py
core/models/: __init__.py  choices.py  course.py  post.py  user.py
core/static/core/css/: club-list.css
core/static/core/img/tv/: data.hcl
core/static/core/js/map/: automate.py
core/templates/core/organization/: list.html
core/utils/: __init__.py  actions.py  admin.py  announcements.py  fields.py  hijack.py  sitemaps.py  test_posts.py  test_schedules.py
core/views/: index.py  post.py  user.py
docs/: CNAME
metropolis/: docker_settings.py  local_settings_sample.py  settings.py  timetable_formats.py
static/js/: admin-custom-times.js  admin-custom-times.min.js
templates/account/: email.html  password_set.html
templates/admin/: change_list_buttons.html  custom_form.html
