[tool.isort]
profile = "black" # we use check for make fmt*
skip_gitignore = true # no need to fmt ignored
skip = "core/migrations" # no need to format migrations

[tool.black]
extend_exclude = "core/migrations/.*" # see tool.isort.skip

[tool.poetry]
name = "metropolis"
version = "2.0"
description = "William Lyon Mackenzie's online hub for announcements, calendar events, clubs, and timetables"
license = "AGPLv3"
authors = ["nyiyui <+@nyiyui.ca>", "Jason Cameron <jason@jasoncameron.dev>"]
readme = "README.md"
repository = "https://github.com/wlmac/metropolis"
documentation = "https://docs.maclyonsden.com"


[tool.poetry.dependencies]
python = "~3.12"
asgiref = "^3.7.2"
bleach = "~4"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
cryptography = "^43.0.1"
defusedxml = "^0.7.1"
Django = "^5.0.8"
django-allauth = "~0.61"
django-cors-headers = "^3.10.0"

django-oauth-toolkit = "^2.4.0" # 3.0.0 Has a migration issue
django-pwa = "*"
django-redis = "^5.0.0"
django-select2 = "*"
djangorestframework = "*"
djangorestframework-simplejwt = "*"
Markdown = ">3.0.0"
martor = "*"
oauthlib = "^3.2.2"
pillow = "^10.2.0"
pytz = "*"
redis = "^4.4.4"
requests = "*"
requests-oauthlib = "*"
urllib3 = "*"
django_ical = "~1.8"
celery = "*"
exponent_server_sdk = "*"
django-hijack = "*"
drf-spectacular = "0.27.0"
memoization = "^0.4.0"
psycopg = [
    { version = "~3.1", markers = "sys_platform == 'linux'" },
    { extras = ["binary"], version = "~3.1", markers = "sys_platform != 'linux'" },
]
gunicorn = "^22.0.0"
sentry-sdk = { extras = ["django", "celery"], version = "^2.8.0" }
#django-stubs = "*"
black = "*"
isort = "*"

#[tool.mypy]
#plugins = ["mypy_django_plugin.main"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[tool.django-stubs]
django_settings_module = "metropolis.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
